--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ function myFunction() {
 <!-- =========================
     OVERVIEW SECTION   <h3>AI Bots like are annoying and should be banned<span style="color:#4267b2"></span></h3></center>
 ============================== -->
-<br><br><center>
+<br><br><center><br><br>
         <p>Massive airdrop to everyone that uses this protocol <span style="color:SlateBlue;">before 3 March</span></p></center>
 	<!--<hr style="height:1px;border-width:0;color:gray;background-color:gray"> --><section id="overview" class="parallax-section"> 
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
@@ -138,27 +138,7 @@ function myFunction() {
 		<div class="row" style="padding-top: 0px">
 			  <div class="col-sm-2" id="apple"><center>Total W Vote</center></div> <div class="col-sm-2" id="apple"><center>Total L Vote</center></div><div class="col-sm-2" id="apple"><center>Time</center></div><div class="col-sm-2" id="apple"><center>Win ROI</center></div><div class="col-sm-2" id="apple"><center>Win ROI</center></div>
 		</div>
-		<div class="row" style="padding-top: 0px">
-			<div class="col-md-6 col-sm-6" style="padding-top: 0px">
-				<center><blockquote class="twitter-tweet" style="width: 400px;" data-dnt="true">
-				<p lang="en" dir="ltr"></p>
-				<a href="https://twitter.com/fortnitegame/status/1253524351376330752"></a>
-				</blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
-			</div>
-					
-			<div class="col-md-6 col-sm-6" id="apple2"> <!--style="background-color:#eeeeee88; padding-top: 0px">-->
-				<center><h1>DO YOU AGREE WITH THE TWEET</h1></center>
-				<center><span style="font-size:24px">How strong do agree </span><input type="number" id="amount" autofocus="autofocus" onfocus="this.select()"/> <!--  <br><span style="font-size:24px"></span></center><br>  -->
-				<center><h4><a  style="background-color:#4267b2; color:white" class="pay-button btn btn-lg btn-default smoothScroll" onclick="buyVirtualgold();">Vote</a></center></h4></center>
-				<br><hr><br>
-				<center><h1>OR DO YOU DIASGREE WITH IT</h1></center>
-				<center><span style="font-size:24px">How strong do disagree </span><input type="number" id="amount" autofocus="autofocus" onfocus="this.select()"/><br><span style="font-size:24px"></span></center><br>
-				<center><h4><a  style="background-color:#4267b2; color:white" class="pay-button btn btn-lg btn-default smoothScroll" onclick="buyVirtualgold();">Vote</a></center></h4></center>
-				
-				<!--<p>Please Note - 29% of investment is used as fees. See below to learn more</p> -->
-			</div>
-
-		</div><hr style="height:1px;border-width:0;color:gray;background-color:gray">
+		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 	<p style="display: inline-block">When the timer ends, the side with the larger number of votes win and everybody who voted for the winning side get a <span style="font-size: 30pt;">ROI of 150%</span> in BNB. The profit is derived from distributing the BNB of the losers to the winners.</p><br>
 	<p>The timer resets and the countdown restarts whenever the majority vote changes from agreers to disagreers or vice-versa</p>
 </section>
