--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function myFunction() {
 			</div>
 			<div class="col-sm-1">
 				<br><br><br><br><br><br><br>
-				<h1 class="wow fadeIn" data-wow-delay="0.0s" style="font-size:112px; font-family:Potra"><span class="wow fadeIn" data-wow-delay="0s"><img src="images/opi5.png" width="375" height="255.869922516"></span></h1><br><br>
+				<h1 class="wow fadeIn" data-wow-delay="0.0s" style="font-size:112px; font-family:Potra"><span class="wow fadeIn" data-wow-delay="0s">      <img src="images/opi5.png" width="375" height="255.869922516"></span></h1><br><br>
 			</div>
 		</div>
 			<h3 class="wow fadeIn" data-wow-delay="0.7s"><hr style="width:96.5%;"><span style="color:grey; font-size:20px;"><div id="spaced">A decentralized protocol where you can bet on the</div>popularity of an opinion on social media and win crypto<div></div><hr style="width:96.5%;"></h3><br>
@@ -131,16 +131,11 @@ function myFunction() {
     OVERVIEW SECTION   <h3>AI Bots like are annoying and should be banned<span style="color:#4267b2"></span></h3></center>
 ============================== -->
 <br><br><center><br><br>
-        <p>Opinion wars protocol isnt live yet. Expected launch date: 3rd October. The opinion wars token pre sale will start begin on 1st September (2 months 3 days remaining). Meanwhile check out the links below: <span style="color:SlateBlue;">before 3 March</span></p></center>
 	<!--<hr style="height:1px;border-width:0;color:gray;background-color:gray"> --><section id="overview" class="parallax-section"> 
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
-		<div class="row" style="padding-top: 0px">
-			  <div class="col-sm-2" id="apple"><center>Total W Vote</center></div> <div class="col-sm-2" id="apple"><center>Total L Vote</center></div><div class="col-sm-2" id="apple"><center>Time</center></div><div class="col-sm-2" id="apple"><center>Win ROI</center></div><div class="col-sm-2" id="apple"><center>Win ROI</center></div>
-		</div>
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">When the timer ends, the side with the larger number of votes win and everybody who voted for the winning side get a <span style="font-size: 30pt;">ROI of 150%</span> in BNB. The profit is derived from distributing the BNB of the losers to the winners.</p><br>
-	<p>The timer resets and the countdown restarts whenever the majority vote changes from agreers to disagreers or vice-versa</p>
+	<p style="display: inline-block">Opinion wars protocol isnt live yet. Expected launch date: 3rd October. The opinion wars token pre sale will start begin on 1st September (2 months 3 days remaining). Meanwhile check out the links below: <span style="color:SlateBlue;">before 3 March</span></p>
 </section>
 
 
