--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ function myFunction() {
 
 
 		<!-- navbar header -->
-		<h5><img class="wow fadeIn" data-wow-delay="0s" src="images/vg.png" width="30" height="30"><span> </span><span class="wow fadeIn" data-wow-delay="0s" id='status' style="color:white" class="smoothScroll"></h5></span>
+		<h5><img class="wow fadeIn" data-wow-delay="0s" src="images/opi5.png" width="43.9676531316" height="30"><span>Opinion Wars</span><span class="wow fadeIn" data-wow-delay="0s" id='status' style="color:white" class="smoothScroll"></h5></span>
 		<!--<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li><p id='account' style="color:white" class="smoothScroll"></p></li>
