--- a/index.html
+++ b/index.html
@@ -157,8 +157,26 @@ function myFunction() {
 				<center><h2><span style="color:#d4af37">Decentralized Transparent and Secure </span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span><br><hr><br>					
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
-				<center><h2><span style="color:#d4af37">Stage 2: Airdrop + Next Steps</span></h2></center></div><br>
+				<center><h2><span style="color:#d4af37">The OWN token</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
+					
+The OWN token (Opinion Wars Native token) is a unique coin that addresses some of major issues faced by other cryptocurrencies and is designed to be as lucrative as possible for holders and it does this in the following ways:
+
+
+1)All profits from the protocol gets distributed to holders through buy and burns: During any particular opinion war all the profits from the protocol (upto 30% of the BNB) gets used to reward the holders by buying and burning the OWN tokens on pancake swap. This increases the value of everybody's holdings and in addition this permanently increases the floor price on pancakeswap. 
+
+2)Designed to go viral: At the core opinion wars requires people of one ideological community to essentially outstake the opposing ideological community for some incentive. And human nature for people with similar ideologies to support each other and to win against those who have strong opposing opinions. So if the above mentioned tweet is added to opinion board then, during the opinion war, Bitcoin Maxis and the non-Bitcoin Maxis will try to outstake each other. And in the process Bitcoin Maxis who have entered a stake will share the link to others within their community and encourage them to participate in order to win and similarly the non Bitcoin Maxis will also do the same. 
+This way as time progresses and as the number of opinions on the opinion board increase then more and more people from different communities will get to know about the opinion wars protocol and therefore the opinion wars token.
+
+3)Hyper deflationary  - There exists a fixed amount of tokens (100 billion). As mentioned above since all the profits (upto 30% of BNB sent to the protocol) gets used to buy and burn, the number circulating supply of tokens reduce quickly. This increases the demand/supply ratio causing the price to pump more easily 
+
+4)Tokenomics based on game theory: The more people buy and hold the more will be the price appreciation for any asset. There have been some attempts by cryptocurrency projects to 
+incentavize buying and holding but their solution isnt the most optimal. Reflection tokens and staking 
+This is exactly what OWN does. It synergestically combines the best of token staking mechanism and token relection mechanism to ensure a system that incentivizes people to stake by 
+giving them bonus OWN tokens while being deflationary. 
+This is how it works:
+There exists a total of a 20% tax whenever someone sells $OWN without staking it first. Or in other words if someone sells their tokens without staking they will have to pay a 20% tax. This tax gets distributed to the stakers. The stake period is 300 days. So those who stake are incentivized w
+					
 We are launching an innovative and fundamentally new kind of token designed to be possibally one of the most lucrative oppurtinities in the crypto space. It is deflationary with inbuilt tokenomics based on game theory to incentavize buying and holding. Additionally, after our token is launched all rewards will be paid in our token. So during a bet, basically all the BNB from the losing side votes will be used to buy up our token on pancakeswap and then these tokens will be distributed to the winners. This drastically increases the amount of buying pressure in the pancakeswap liquidity pool, which thereby increases the value of everybody's holdings. All info regarding this will be released after beta launch. To be eligible for the token airdrop you will need to do the following:</h3></span><br><hr><br>
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
 				<center><h2><span style="color:#d4af37">Risks</span></h2></center></div><br>
