--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function myFunction() {
 <div style="background-image: url('../images/img.png');">
 <section id="detail" class="parallax-section">
 	<div class="container">
-		<div class="row">
+		<div class="row apple4">
 				<div class="wow fadeIn"><center><img src="images/vg.png" width="97" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">Introducing Opinion Wars</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">People on the internet love to argue. What if there were financial stakes involved? Similar to how people make money by betting on the right companies in the stock market,what if we could something similar for opinions? The goal of opinion wars is
