--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ function myFunction() {
 <section id="detail" class="parallax-section">
 	<div class="container">
 		<div class="row">
-<div id="apple4"> Hi
+<section id="apple4"> He
 				<div class="wow fadeIn"><center><img src="images/vg.png" width="97" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">Introducing Opinion Wars</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">People on the internet love to argue. What if there were financial stakes involved? Similar to how people make money by betting on the right companies in the stock market,what if we could something similar for opinions? The goal of opinion wars is
@@ -158,7 +158,7 @@ function myFunction() {
 
 3)to create an innovative new kind token associated with the protocol that addresses some of major issues faced by other cryptocurrencies designed to be as lucrative as possible for holders
 </h3></span><br><hr><br>
-</div>
+</section>
 				<div class="wow fadeIn"><center><img src="images/back.png" width="222" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">How it works</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Any user will be able add any tweet to opinion wars board and stake any amount of BNB either in favor or against the tweet. For example say there exists a tweet saying “Bitcoin will remain to be the  most popular cryptocurrency over the next 10 years”. Now anyone who agrees with the tweet can add this tweet to opinion wars and stake any amount of BNB in favor of this tweet. 
