--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ function myFunction() {
 <section id="detail" class="parallax-section">
 	<div class="container">
 		<div class="row">
-<section id="apple4"> He
+<section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/vg.png" width="97" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">Introducing Opinion Wars</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">People on the internet love to argue. What if there were financial stakes involved? Similar to how people make money by betting on the right companies in the stock market,what if we could something similar for opinions? The goal of opinion wars is
@@ -157,8 +157,10 @@ function myFunction() {
 2) to create a similar system that rewards those who bet on the right ideas, while penalizing those who bet on wrong ones similar to how people make/lose money by betting on the right/wrong companies in the stock market
 
 3)to create an innovative new kind token associated with the protocol that addresses some of major issues faced by other cryptocurrencies designed to be as lucrative as possible for holders
-</h3></span><br><hr><br>
-</section>
+</h3></span>
+</section><br><hr><br>
+<section id="apple4"> 
+
 				<div class="wow fadeIn"><center><img src="images/back.png" width="222" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">How it works</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Any user will be able add any tweet to opinion wars board and stake any amount of BNB either in favor or against the tweet. For example say there exists a tweet saying “Bitcoin will remain to be the  most popular cryptocurrency over the next 10 years”. Now anyone who agrees with the tweet can add this tweet to opinion wars and stake any amount of BNB in favor of this tweet. 
@@ -166,7 +168,8 @@ function myFunction() {
 After the tweet is added others also will be able stake either in favor or against the tweet. All the tweets on opinion wars will be ranked in a descending order of total stake. 
 
 Once the timer hits zero, the side that has more stake wins. If majority of the stake is for the tweet then the overall sentiment is considered positive, and everybody who voted in favor of tweet wins. And if the opposite happens everyone who voted against the tweet wins. And the the BNB of the losers get distributed to the winners in proportion to their winner bet sizes.
-<br><hr><br>
+</section><br><hr><br>
+<section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/secur.png" width="594" height="300"></center><br>
 				<center><h2><span style="color:#d4af37">Decentralized Transparent and Secure </span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span><br><hr><br>					
@@ -180,7 +183,8 @@ The OWN token (Opinion Wars Native token) is an innovative new kind of token tha
 <li><span style="color:#d4af37">Designed to go viral</span>: At the core opinion wars requires people of one ideological community to essentially outbid the opposing ideological community for some incentive. And whenever a contraversial post is added to opinion wars it is human nature for people to reach out to others with similar ideologies for support in order to win against those who have strong opposing opinions. Therefore as time progresses as the number of opinions on the opinion wars increase, more and more people from different communities will get to know about this protocol and thereby the opinion wars token.</li><br>
 <li><span style="color:#d4af37">Hyper deflationary</span>  - There exists a fixed amount of tokens (100 billion). As mentioned above since all the profits (upto 30% of BNB sent to the protocol) gets used to buy and burn, the number circulating supply of tokens reduce quickly at a very fast rate. This increases the demand/supply ratio causing the price to pump more easily. </li><br>
 <li><span style="color:#d4af37">Advanced Tokenomics based on game theory</span>: OWN uses a superior token reflection mechanism where holders are incentavized to stake and penalized (a 33% tax) for selling without staking. The penalization tax is used to reward stakers. This mechanism incentavizes people (in a non-inflationary way) to stake their tokens, which redcues the overall possible sell pressure at a given time causing the price to pump more easily. </li>					
-</h3></span><br><hr><br>
+</h3></span>
+</section><br><hr><br>
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
 				<center><h2><span style="color:#d4af37">Risks</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
