--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function myFunction() {
 
 3)to create an innovative new kind token associated with the protocol that addresses some of major issues faced by other cryptocurrencies designed to be as lucrative as possible for holders
 </h3></span>
-</section><br><hr><br>
+</section><br><br>
 <section id="apple4"> 
 
 				<div class="wow fadeIn"><center><img src="images/back.png" width="222" height="97"></center><br>
@@ -184,7 +184,9 @@ The OWN token (Opinion Wars Native token) is an innovative new kind of token tha
 <li><span style="color:#d4af37">Hyper deflationary</span>  - There exists a fixed amount of tokens (100 billion). As mentioned above since all the profits (upto 30% of BNB sent to the protocol) gets used to buy and burn, the number circulating supply of tokens reduce quickly at a very fast rate. This increases the demand/supply ratio causing the price to pump more easily. </li><br>
 <li><span style="color:#d4af37">Advanced Tokenomics based on game theory</span>: OWN uses a superior token reflection mechanism where holders are incentavized to stake and penalized (a 33% tax) for selling without staking. The penalization tax is used to reward stakers. This mechanism incentavizes people (in a non-inflationary way) to stake their tokens, which redcues the overall possible sell pressure at a given time causing the price to pump more easily. </li>					
 </h3></span>
-</section><br><hr><br>
+</section><br><br>
+<section id="apple4"> 
+
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
 				<center><h2><span style="color:#d4af37">Risks</span></h2></center></div><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
@@ -192,6 +194,7 @@ The Opinion wars protocol opens the door to a fundamentally new kind of market p
 				<span id="dots"></span><span id="more"><br><center><img src="images/bgr-1.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-2.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-3.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-4.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-5.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-6.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/goldpaper-7.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/goldpaper-8.png" width="850" height="1100" id="borderd"><br></center><br></span></p><center><button onclick="myFunction()" id="myBtn" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button></center>
 		</div>
 	</div>
+</section><br><br>
 </section>
 </div>
 
