--- a/index.html
+++ b/index.html
@@ -168,11 +168,14 @@ function myFunction() {
 After the tweet is added others also will be able stake either in favor or against the tweet. All the tweets on opinion wars will be ranked in a descending order of total stake. 
 
 Once the timer hits zero, the side that has more stake wins. If majority of the stake is for the tweet then the overall sentiment is considered positive, and everybody who voted in favor of tweet wins. And if the opposite happens everyone who voted against the tweet wins. And the the BNB of the losers get distributed to the winners in proportion to their winner bet sizes.
-</section><br><hr><br>
+</section><br><br>
 <section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/secur.png" width="594" height="300"></center><br>
 				<center><h2><span style="color:#d4af37">Decentralized Transparent and Secure </span></h2></center></div><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span><br><hr><br>					
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span>
+					
+</section><br><br>
+<section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
 				<center><h2><span style="color:#d4af37">The Opinion Wars Native token ($OWN)</span></h2></center></div><h3 style="font-family:Yu Gothic Light">innovative | decentralized | lucrative</h3><br>
 				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
