--- a/index.html
+++ b/index.html
@@ -150,13 +150,12 @@ function myFunction() {
 <section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/vg.png" width="97" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">Introducing Opinion Wars</span></h2></center></div><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">People on the internet love to argue. What if there were financial stakes involved? Similar to how people make money by betting on the right companies in the stock market,what if we could something similar for opinions? The goal of opinion wars is
-
-1) to create a decentralized platform where the market can decide on how strong the overall sentiment towards a given opinion in order to give an honest indication of the public sentiment regarding various important topics
-
-2) to create a similar system that rewards those who bet on the right ideas, while penalizing those who bet on wrong ones similar to how people make/lose money by betting on the right/wrong companies in the stock market
-
-3)to create an innovative new kind token associated with the protocol that addresses some of major issues faced by other cryptocurrencies designed to be as lucrative as possible for holders
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">People on the internet love to argue. What if there were financial stakes involved? Similar to how people make money by betting on the right companies in the stock market,what if we could something similar for opinions? The goal of opinion wars is:<br>
+<ol>
+<li> to create a decentralized platform where the market can decide on how strong the overall sentiment towards a given opinion in order to give an honest indication of the public sentiment regarding various important topics</li><br>
+<li> to create a similar system that rewards those who bet on the right ideas, while penalizing those who bet on wrong ones similar to how people make/lose money by betting on the right/wrong companies in the stock market</li><br>
+<li>to create an innovative new kind token associated with the protocol that addresses some of major issues faced by other cryptocurrencies designed to be as lucrative as possible for holders</li>
+</ol>
 </h3></span>
 </section><br><br>
 <section id="apple4"> 
