--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@ function myFunction() {
   }
 }
 </script>
+<script>
+function myFunction2() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more2");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read Moree"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read Less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
 <style>
 #more {display: none;}
 </style>
