--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function myFunction() {
 function myFunction2() {
   var dots = document.getElementById("dots2");
   var moreText = document.getElementById("more2");
-  var btnText = document.getElementById("myBtn");
+  var btnText = document.getElementById("myBtn2");
 
   if (dots.style.display === "none") {
     dots.style.display = "inline";
@@ -57,6 +57,26 @@ function myFunction2() {
   }
 }
 </script>
+	
+<script>
+function myFunction3() {
+  var dots = document.getElementById("dots3");
+  var moreText = document.getElementById("more3");
+  var btnText = document.getElementById("myBtn3");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read Moree"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read Less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+	
+	
 <style>
 #more {display: none;}
 </style>
@@ -198,8 +218,8 @@ Once the timer hits zero, the side that has more stake wins. If majority of the 
 					
 The OWN token (Opinion Wars Native token) is an innovative new kind of token that addresses some of major issues faced by other cryptocurrencies. The following distinguishing features are the main reasons as to why it has the potential to be extremely lucative in comparison to other cryptocurrencies:
 <ol><br>
-<li><span style="color:#d4af37">All profits from the protocol gets distributed to holders through buy and burns</span>: <span id="dots2"></span><span id="more2">All the profits from the protocol (upto 30% of the BNB sent to the contract) gets used to reward the holders by buying and burning the OWN tokens on pancake swap. This increases the value of everybody's holdings and in addition this permanently increases the floor price on pancakeswap.</span><button onclick="myFunction2()" id="myBtn" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read more</button></li><br>
-<li><span style="color:#d4af37">Designed to go viral</span>: At the core opinion wars requires people of one ideological community to essentially outbid the opposing ideological community for some incentive. And whenever a contraversial post is added to opinion wars it is human nature for people to reach out to others with similar ideologies for support in order to win against those who have strong opposing opinions. Therefore as time progresses as the number of opinions on the opinion wars increase, more and more people from different communities will get to know about this protocol and thereby the opinion wars token.</li><br>
+<li><span style="color:#d4af37">All profits from the protocol gets distributed to holders through buy and burns</span>: <span id="dots2"></span><span id="more2">All the profits from the protocol (upto 30% of the BNB sent to the contract) gets used to reward the holders by buying and burning the OWN tokens on pancake swap. This increases the value of everybody's holdings and in addition this permanently increases the floor price on pancakeswap.</span><button onclick="myFunction2()" id="myBtn2" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read more</button></li><br>
+<li><span style="color:#d4af37">Designed to go viral</span>: <span id="dots3"></span><span id="more3">At the core opinion wars requires people of one ideological community to essentially outbid the opposing ideological community for some incentive. And whenever a contraversial post is added to opinion wars it is human nature for people to reach out to others with similar ideologies for support in order to win against those who have strong opposing opinions. Therefore as time progresses as the number of opinions on the opinion wars increase, more and more people from different communities will get to know about this protocol and thereby the opinion wars token.</span><button onclick="myFunction3()" id="myBtn3" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read more</button></li><br>
 <li><span style="color:#d4af37">Hyper deflationary</span>  - There exists a fixed amount of tokens (100 billion). As mentioned above since all the profits (upto 30% of BNB sent to the protocol) gets used to buy and burn, the number circulating supply of tokens reduce quickly at a very fast rate. This increases the demand/supply ratio causing the price to pump more easily. </li><br>
 <li><span style="color:#d4af37">Advanced Tokenomics based on game theory</span>: OWN uses a superior token reflection mechanism where holders are incentavized to stake and penalized (a 33% tax) for selling without staking. The penalization tax is used to reward stakers. This mechanism incentavizes people (in a non-inflationary way) to stake their tokens, which redcues the overall possible sell pressure at a given time causing the price to pump more easily. </li>					
 </h3></span>
