--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function myFunction2() {
 
   if (dots.style.display === "none") {
     dots.style.display = "inline";
-    btnText.innerHTML = "Read Moree"; 
+    btnText.innerHTML = "Read Goldpaper"; 
     moreText.style.display = "none";
   } else {
     dots.style.display = "none";
@@ -66,7 +66,7 @@ function myFunction3() {
 
   if (dots.style.display === "none") {
     dots.style.display = "inline";
-    btnText.innerHTML = "Read Moree"; 
+    btnText.innerHTML = "Read Goldpaper"; 
     moreText.style.display = "none";
   } else {
     dots.style.display = "none";
