--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function myFunction5() {
 
 				<div class="wow fadeIn"><center><img src="images/back.png" width="222" height="97"></center><br>
 				<center><h2><span style="color:#d4af37">How it works</span></h2></center></div><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Any user will be able add any tweet to opinion wars board and stake any amount of BNB either in favor or against the tweet. For example say there exists a tweet saying “Bitcoin will remain to be the  most popular cryptocurrency over the next 10 years”. Now anyone who agrees with the tweet can add this tweet to opinion wars and stake any amount of BNB in favor of this tweet. 
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="text-align:left; font-family:Yu Gothic Light">Any user will be able add any tweet to opinion wars board and stake any amount of BNB either in favor or against the tweet. For example say there exists a tweet saying “Bitcoin will remain to be the  most popular cryptocurrency over the next 10 years”. Now anyone who agrees with the tweet can add this tweet to opinion wars and stake any amount of BNB in favor of this tweet. 
 
 After the tweet is added others also will be able stake either in favor or against the tweet. All the tweets on opinion wars will be ranked in a descending order of total stake. 
 
@@ -248,13 +248,13 @@ Once the timer hits zero, the side that has more stake wins. If majority of the 
 <section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/secur.png" width="594" height="300"></center><br>
 				<center><h2><span style="color:#d4af37">Decentralized Transparent and Secure </span></h2></center></div><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span>
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="text-align:left; font-family:Yu Gothic Light">Opinion Wars has no owner. <span style="color:#4267b2">Your funds are never controlled by anyone.</span> Virtualgold uses <span style="color:#4267b2">smart contract technology</span> to ensure <span style="color:#4267b2">maximum security</span> and <span style="color:#4267b2">decentralized ownership</span>. Additionally, our smart contract code has been <span style="color:#4267b2">verified</span> and made <span style="color:#4267b2">publicly viewable</span>. Therefore all our code is viewable directly from the blockchain (on etherscan) This means that anyone/everyone would be free to audit our code whenever they like. Therefore any form of scam or malpractice is impossible.</h3></span>
 					
 </section><br><br>
 <section id="apple4"> 
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
-				<center><h2><span style="color:#d4af37">The Opinion Wars Native token ($OWN)</span></h2></center></div><h3 style="font-family:Yu Gothic Light">innovative | decentralized | lucrative</h3><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
+				<center><h2><span style="color:#d4af37">The Opinion Wars Native token ($OWN)</span></h2></center></div><h3 style="text-align:left; font-family:Yu Gothic Light">innovative | decentralized | lucrative</h3><br>
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="text-align:left; font-family:Yu Gothic Light">
 					
 The OWN token (Opinion Wars Native token) is an innovative new kind of token that addresses some of major issues faced by other cryptocurrencies. The following distinguishing features are the main reasons as to why it has the potential to be extremely lucative in comparison to other cryptocurrencies:
 <ol><br>
@@ -268,7 +268,7 @@ The OWN token (Opinion Wars Native token) is an innovative new kind of token tha
 
 				<div class="wow fadeIn"><center><img src="images/image (4).png" width="130" height="130"></center><br>
 				<center><h2><span style="color:#d4af37">Risks</span></h2></center></div><br>
-				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="font-family:Yu Gothic Light">
+				<div class="wow fadeIn" data-wow-delay="0.3s"><span style="color:white"><h3 style="text-align:left; font-family:Yu Gothic Light">
 The Opinion wars protocol opens the door to a fundamentally new kind of market place and the OWN token has the potential to be one of the most lucrative oppurtunities in the crypto space (especially for early holders). But with that said, anything rewarding comes with a risk. Cryptocurrencies are both the highest appreciating asset class and also the most risky asset class. So always be prepared for the worst, dont have guarenteed expectations and please dont put in more money than you can afford to lose.</h3></span><br><hr><br>
 				<span id="dots"></span><span id="more"><br><center><img src="images/bgr-1.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-2.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-3.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-4.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-5.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/bgr-6.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/goldpaper-7.png" width="850" height="1100" id="borderd"><br></center><br><center><img src="images/goldpaper-8.png" width="850" height="1100" id="borderd"><br></center><br></span></p><center><button onclick="myFunction()" id="myBtn" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button></center>
 		</div>
