--- a/index.html
+++ b/index.html
@@ -210,7 +210,14 @@ function myFunction5() {
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">Opinion wars protocol isnt live yet. Expected launch date: 3rd October. The opinion wars token pre sale will start begin on 1st September (2 months 3 days remaining). Meanwhile check out the links below: <span style="color:SlateBlue;">before 3 March</span></p>
+	<p style="display: inline-block">Quite possibly the most lucrative token ever created is launching soon. $OWN (the native token of this protocol) is an advanced new kind of token designed in a way to especially reward early buyers the most. Below is the countdown to presale launch. Stay tuned! Meanwhile check out the links below: <span style="color:SlateBlue;">before 3 March</span></p>
+		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
+	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">What makes OWN different</a>
+	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">More info on OWN protocol</a>
+	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Sneak Peak of protocoll</a>
+	<a href="https://virtualgoldbackup.site/" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.7s">Risks</a>
+		
+		
 </section>
 
 
