--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ function myFunction5() {
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">$OWN (the governance token for this protocol) is an advanced new kind of cryptocurrency that could quite possibly be the one of the most lucrative tokens ever created! (especially for early buyers)<span style="color:SlateBlue;">Countdown for Launch:</span></p>
+	<p style="display: inline-block">$OWN is a fair launched, advanced, new kind of cryptocurrency that could quite possibly be the one of the most lucrative tokens ever created! Stay tuned, you dont wanna miss out on this. <span style="color:SlateBlue;">Countdown for Launch:</span></p>
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
-	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN different</a>
-	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate</a>
+	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN token different</a>
+	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate in presale</a>
 		
 		
 </section>
