--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@ function myFunction5() {
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
 	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN token different</a>
 	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate in presale</a>
+	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Download Whitepaper</a>
+	<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.05s">Join the official Opinion Wars Telegram Group</a>
+	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Risks & Disclaimer</a>
 		
 		
 </section>
